Stopgap measure for site suggestions' large tag issues

--- a/sass/_project-sass/_project-Main.scss
+++ b/sass/_project-sass/_project-Main.scss
@@ -431,7 +431,7 @@
   width: 165px;
   margin-right: 20px;
   margin-bottom: 20px;
-  height: 160px;
+  height: 16.8em;
 }
 .stats {
   margin-bottom: 2em;
@@ -458,7 +458,7 @@
 }
 .site-portrait img {
   width: 155px;
-  height:93px;
+  height: 116px;
 }
 .site-portrait .caption {
   display: block;
